--- a/usuario/templates/home.html
+++ b/usuario/templates/home.html
@@ -1,4 +1,3 @@
-
 {% extends 'template.html' %}
 {% load static %}
 
@@ -12,6 +11,12 @@
 {% comment %} BLOCO DO CORPO DO HTML {% endcomment %}
 {% block body %}
     <h1>Teste</h1>
+    <br>
+    <br>
+    <br>
+
+    <a href="{% url 'logout' %}" class="btn btn-lg btn-success">teste</a>
+
 {% endblock %}
 
 {% comment %} BLOCO DE SCPRITS {% endcomment %}
