--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -60,7 +60,7 @@
         <br>
         <div class="form-group col-12">
             <a href="{% url 'password_reset' %}" class="link-none"><p class="font-italic text-sm-left">Esqueci minha senha.</p></a>
-            <a href="" class="link-none"><p class="font-italic text-sm-left">Criar conta.</p></a>
+            <a href="{% url 'signup' %}" class="link-none"><p class="font-italic text-sm-left">Criar conta.</p></a>
         </div>
 
     {% endif %}
