--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,8 +32,21 @@
     width: 100%;;
 }
 
+#id_password1{
+    width: 100%;;
+}
+
+#id_password2{
+    width: 100%;;
+}
+
 .errorlist{
     color: red;
     margin-top: 10px;
     font-style: italic;
+}
+
+.helptext{
+    font-style: italic;
+    color: #6c757d;
 }
