Send Email in forget password

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -54,7 +54,7 @@
         <!-- BOTAO -->
         <div class="row justify-content-center">
             <div class="col-5">
-                <input class="btn btn-outline-success btn-block" type="submit" value="Cadastras">
+                <input class="btn btn-outline-success btn-block" type="submit" value="Cadastrar">
             </div>
         </div>
     </form>
