--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -31,12 +31,12 @@
             <!-- BOTAO -->
             <div class="row justify-content-center">
                 <div class="col-5">
-                    <input class="btn btn-outline-secondary btn-block" type="submit" value="Reset">
+                    <input class="btn btn-outline-secondary btn-block" type="submit" value="Trocar">
                 </div>
             </div>
         </form>
     {% else %}
-        <p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
+        <p>Link inválido. Por gentileza tentar novamente.</p>
     {% endif %}
 
 {% endblock %}
