Ajustando tela Home

--- a/templates/template-login.html
+++ b/templates/template-login.html
@@ -15,7 +15,7 @@
         
         {% block head %}{% endblock %}
     </head>
-    <body style="background-color: lightseagreen;">
+    <body style="background-color: #17a2b8;">
         
         <div class="container">
             <div class="row justify-content-center">
