--- a/usuario/templates/home.html
+++ b/usuario/templates/home.html
@@ -2,20 +2,15 @@
 {% load static %}
 
 {% comment %} BLOCO DE TITULO DO SITE {% endcomment %}
-{% block title %}{% endblock %}
+{% block title %}Início{% endblock %}
+{% block name_page %}Início{% endblock %}
+{% block tree %}{% endblock %}
 
 {% comment %} BLOCO HEAD {% endcomment %}
-{% block head %}
-{% endblock %}
+{% block head %}{% endblock %}
 
 {% comment %} BLOCO DO CORPO DO HTML {% endcomment %}
 {% block body %}
-    <h1>Teste</h1>
-    <br>
-    <br>
-    <br>
-
-    <a href="{% url 'logout' %}" class="btn btn-lg btn-success">teste</a>
 
 {% endblock %}
 
