--- a/templates/template.html
+++ b/templates/template.html
@@ -21,8 +21,7 @@
         <!-- DataTables -->
         <link rel="stylesheet" href="{% static 'plugins/datatables-bs4/css/dataTables.bootstrap4.css' %}">
 
-        {% comment %} Bootstrap {% endcomment %}
-        <link rel="stylesheet" type="text/css" href="{% static 'plugins/bootstrap-4.4.1-dist/css/bootstrap.css' %}">
+        {% comment %} MY STYLE {% endcomment %}
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
         {% block head %}{% endblock %}
@@ -193,9 +192,6 @@
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous">
         </script>
-
-        <script src="{% static 'plugins/bootstrap-4.4.1-dist/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'plugins/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'plugins/AdminLTE-3.0.2/dist/js/adminlte.min.js' %}"></script>
 
         <!-- DataTables -->
