--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,8 +4,7 @@
 {% block card-title %}Nova conta{% endblock %}
 
 {% block body %}
-    <form method="post">
-        {% csrf_token %}
+    <form method="post">{% csrf_token %}
         {% if form.errors %}
             <ul>
                 {% for key,value in form.errors.items %} 
@@ -18,6 +17,13 @@
                 {{ form.errorlist }}
             </div>
         {% endif %}
+        
+        <!-- Nome completo -->
+        <div class="form-group col-12">
+            <label for="{{ form.first_name.id_for_label }}" class="form-text text-muted">Nome completo*:</label>
+            {{ form.first_name }}
+            <p class="text-sm-left font-italic text-muted">{{ form.first_name.help_text }}</p>
+        </div>
 
         <!-- USUARIO -->
         <div class="form-group col-12">
